fix: TransactionRepository and its tests